# LeverX-Homework-4

./: .gitignore  README.md  manage.py  pyproject.toml
api/: apps.py  repositories.py  serializers.py  views.py
config/: settings.py  urls.py
input/: students.json
students_rooms/: apps.py  repositories.py  serializers.py  urls.py  views.py
